plugins {
    id 'fabric-loom' version '1.6-SNAPSHOT'
    id 'maven-publish'
    id "com.modrinth.minotaur" version "2.+"
    id "com.matthewprenger.cursegradle" version "1.+"
//    id 'java'
//    id 'com.github.johnrengelman.shadow' version '1.2.2'
}

version = project.mod_version
group = project.maven_group

if (project.hasProperty("mod_extradata") && !project.mod_extradata.isEmpty()) {
    archivesBaseName = project.archives_base_name + "-mc" + project.minecraft_version + "-" + project.mod_extradata;
} else {
    archivesBaseName = project.archives_base_name + "-mc" + project.minecraft_version
}

dependencies {
    //to change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    modApi ('com.terraformersmc:modmenu:9.2.0') {
        transitive = false
    }

    //modified under the com.github.Ascynx group to follow a modified working mirror for this dependency.
    include(implementation('com.github.Ascynx:discord-rpc-release:v3.4.0'))
    include(implementation("com.github.Ascynx:java-discord-rpc:v2.0.2"))

    //un-comment those if you want to load from local maven (don't have both local and jitpack sources on at the same time, dunno what it'd do I never tried it)
    //modApi "ch.njol.minecraft:ui-framework-mc1_19_3:${project.ui_framework_version}"
    //include "ch.njol.minecraft:ui-framework-mc1_19_3:${project.ui_framework_version}"
    //modApi "ch.njol.minecraft:config-framework-mc1_19:${project.config_framework_version}"
    //include "ch.njol.minecraft:config-framework-mc1_19:${project.config_framework_version}"
    //un-comment those if you want to load from jitpack (don't have both local and jitpack sources on at the same time, dunno what it'd do I never tried it)
    modApi(include('com.github.Ascynx:MCConfigFramework:mc1.20.4-SNAPSHOT'))
    modApi(include('com.github.Ascynx:MCUIFramework:mc1.20.4-SNAPSHOT'))

    // Optional Mod Integrations
    modApi ("com.github.Provismet:ProviHealth:1.2.4-mc1.20.2") {
        transitive = false
    } //(no 1.20.4 specific version, mentioned as compatible)
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    withSourcesJar()
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url = "https://maven.terraformersmc.com" }
    maven { url = "https://maven.shedaniel.me/" }
    maven { url = "https://jitpack.io/" }
}

processResources {
    from(sourceSets.main.resources.srcDirs) {
        include "fabric.mod.json"
        expand project.properties
        duplicatesStrategy = 'include'
    }
    from(sourceSets.main.resources.srcDirs) {
        exclude "fabric.mod.json"
        duplicatesStrategy = 'include'
    }
}

// ensure that the encoding is set to UTF-8, no matter what the system default is
// this fixes some edge cases with special characters not displaying correctly
// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

jar {
    from("LICENSE") {
        rename { "${it}_${archives_base_name}"}
    }
}
//shadowJar {
//    dependencies {
//        include(dependency('me.shedaniel.cloth:cloth-config-fabric:.*'))
//    }
//}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            // add all the jars that should be included when publishing to maven
            artifact(remapJar) {
                builtBy remapJar
            }
        }
    }

    // select the repositories you want to publish to
    repositories {
        // uncomment to publish to the local maven
        // mavenLocal()
    }
}

def changeLog = '''

'''

String getReleaseType() {
    if (!project.hasProperty("mod_extradata")) {
        return "release"
    }

    for (String prefix in new String[]{"pre", "beta", "alpha"}) {
        if (project.mod_extradata.startsWithIgnoreCase(prefix)) {
            switch (prefix) {
                case "pre":
                case "beta":
                    return "beta"
                case "alpha":
                    return "alpha"
                default:
                    return "release"
            }
        }
    }

    return "release";
}

modrinth {
    token = System.getenv("MODRINTH_TOKEN")
    projectId = "unofficial-monumenta-mod"
    versionNumber = project.mod_version
    versionType = getReleaseType()
    uploadFile = remapJar
    gameVersions = [project.minecraft_version]
    loaders = ["fabric"]
    changelog = changeLog
    dependencies {
        required.project "fabric-api"
        optional.project "modmenu"
        optional.project "cloth-config"
    }
    // debugMode = true
}

curseforge {
    String releaseString = getReleaseType()

    if (System.getenv("CURSEFORGE_TOKEN") != null) {
        apiKey = System.getenv("CURSEFORGE_TOKEN")
    }
    project {
        id = '509666'
        changelog = changeLog
        releaseType = releaseString
        addGameVersion project.minecraft_version
        addGameVersion 'Fabric'

        mainArtifact(remapJar) {
            relations {
                requiredDependency "fabric-api"
                optionalDependency "modmenu"
                optionalDependency "cloth-config"
            }
        }
        options {
            // debug = true
        }
    }
}
